--- a/Ecommerce-frontend/package.json
+++ b/Ecommerce-frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "axios-cache-adapter": "^2.7.3",
     "boxicons": "^2.1.4",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
